# go2_sim

./: README.md
go2_sim/go2_description/: CMakeLists.txt  package.xml
go2_sim/go2_description/config/: robot_control.yaml
go2_sim/go2_description/launch/: go2_visualize.launch.py
go2_sim/go2_description/rviz/: go2_vis.rviz
go2_sim/go2_description/urdf/: go2.gv  go2.urdf
go2_sim/go2_description/xacro/: gazebo.xacro  robot.xacro  ros2_control.xacro
go2_sim/go2_gazebo/: CMakeLists.txt  package.xml
go2_sim/go2_gazebo/launch/: controllers_go2.launch.py  spawn_go2.launch.py  start_world.launch.py
go2_sim/go2_gazebo/worlds/: T2.world  lab.world  lab_emp.world  room.world
go2_sim/go2_gazebo/worlds/house/: model.sdf
go2_sim/go2_gazebo/worlds/models/: model.config  model.sdf
go2_sim/go2_navigation/: package.xml  setup.py
go2_sim/go2_navigation/config/: mapper_params_online_async.yaml
go2_sim/go2_navigation/go2_navigation/: static_map_publisher.py  tf_publisher.py
go2_sim/go2_navigation/launch/: 1.py  navigation_gpt.launch.py  navigation_launch.py  navigation_new.launch.py
go2_sim/go2_navigation/map/: go2_map.pgm  go2_map.yaml
go2_sim/go2_navigation/xml/: go2_bt.xml
ros2_unitree_legged_controller/: CMakeLists.txt
ros2_unitree_legged_msgs/: CMakeLists.txt
unitree_guide2/: CMakeLists.txt
